--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,6 +1,6 @@
-@import '_vars.css';
-
 @import 'normalize.css';
+
+@import '_vars';
 
 @import '_mixins';
 
@@ -8,8 +8,11 @@
 
 @import '_global';
 
+@import '_headline';
+
 @import '_btn';
 
+@import '_generic-content';
 
 
 
