--- a/app/styles/_generic-content.css
+++ b/app/styles/_generic-content.css
@@ -1,7 +1,8 @@
 .generic-content{
     p{
         line-height: 1.64;
-        margin: 1.8rem 0;
+        margin: 0 0 1.8rem 0;
+        font-weight: 300;
         
         @mixin atSmall{
             font-size: 1.125rem;
