--- a/app/styles/_global.css
+++ b/app/styles/_global.css
@@ -16,6 +16,31 @@ a {
     box-sizing: border-box;
 }
 
+.main-nav{
+    float: right;
+    
+    ul {
+        margin: 0;
+        padding:0;
+        @mixin clearfix;
+    }
+    
+    li {
+        list-style: none;
+        float: left;
+        padding-right: 20px;
+        padding-top: 12px;
+        
+    }
+    
+    a {
+        top: 0px;
+        color: white;
+        text-decoration: none;
+        font-weight: 300;
+    }
+}
+
 .testimonial{
     background-color: rgba(255,255,255,.8);
     padding: 0 18px 1px 18px;
