--- a/app/styles/_header.css
+++ b/app/styles/_header.css
@@ -3,40 +3,124 @@
      position: absolute;
      z-index: 2;
      width: 100%;
+     transition: background-color .3s ease-out;
+     
+     &--expanded{
+          background-color: rgba($blue, .55)
+     }
      
      @mixin atMed{
-          background-color: rgba($blue, .3);
+          background-color: rgba($blue, .5);
 
      }
      
      &__menu{
-          display: none;
+          opacity: 0;
+               transition: all .3s ease-out;
+               position: relative;
+               z-index: -10;
+          transform: scale(1.2);
+          padding-top: 90px;
+          text-align: center;
      
-       @mixin atMed{
-          display: block;
+          @mixin atMed{
+               opacity: 1;
+               z-index: 1;
+               padding-top: 0;
+               transform: scale(1);
 
-          }   
           
+          }
+          
+          &--visible{
+               opacity: 1;
+               z-index: 1;
+               transform: scale(1);
+
+
+          }
      }
      
      &__menu-icon{
+          margin: 10px;
           width: 20px;
-          height: 20px;
-          background-color: black;
+          height: 18px;
           position: absolute;
           top: 10px;
           right: 10px;
+          z-index: 10;
+          /*outline:  5px solid rgba($blue, .55);*/
+          /*background-color: rgba($blue, .55);*/
+
+
+          &::before{
+               content: "";
+               position: absolute;
+               top:0;
+               left:0;
+               width:20px;
+               height:2px;
+               background-color: #fff;
+               transform-origin: 0 0;
+               transition: transform .3s ease-out;
+
+
+          }
+          
+          &-mid{
+               position: absolute;
+               top:8px;
+               left:0;
+               width:20px;
+               height:2px;
+               background-color: #fff;
+               transition: all .3s ease-out;
+               transform-origin: 0 50%;
+
+
+          }
+          
+          &::after{
+               content: "";
+               position: absolute;
+               bottom: 0;
+               left:0;
+               width:20px;
+               height:2px;
+               background-color: #fff;
+               transform-origin: 0 100%;
+               transition: transform .3s ease-out;
+
+          }
           
           
        @mixin atMed{
           display: none;
 
-          }   
+          } 
+          
+          &-x{
+               &::before{
+                    transform: rotate(45deg) scaleX(1.25);
+               }
+               .header__menu-icon-mid{
+                    opacity: 0;
+                    transform: scaleX(0);
+                    
+               }
+               &::after{
+                    transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+               }
+          }
           
      }
      
      &__btn{
-         float: right;
+          margin-bottom: 5px;
+          @mixin atMed{
+               margin-bottom: 0;
+               float: right;
+          }
     }
     
      &__logo{
